Reversed logo and webfonts

--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,7 @@
     "bourbon": "~4.2.4",
     "neat": "~1.7.2",
     "modernizr": "~2.8.3",
-    "fitvids": "~1.1.0",
-    "bower-webfontloader": "~1.5.16"
+    "fitvids": "~1.1.0"
   },
   "ignore": [
     "node_modules",
@@ -33,9 +32,6 @@
     },
     "fitvids": {
       "js": "jquery.fitvids.js"
-    },
-    "bower-webfontloader": {
-      "js": "webfont.js"
     }
   }
 }
