--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "autoprefixer-core": "^5.2.1",
+    "autoprefixer": "^6.0.0",
     "cssnano": "^2.6.1",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.3",
@@ -30,7 +30,7 @@
     "grunt-browser-sync": "^2.1.3",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.1",
-    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
