--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "autoprefixer": "^6.0.0",
-    "cssnano": "^2.6.1",
+    "autoprefixer": "^6.0.3",
+    "cssnano": "^3.3.1",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.3",
     "grunt-bower-task": "^0.4.0",
@@ -34,11 +34,11 @@
     "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-modernizr": "^0.6.0",
+    "grunt-modernizr": "^1.0.0",
     "grunt-notify": "^0.4.1",
     "grunt-postcss": "^0.6.0",
-    "grunt-sass": "^1.0.0",
+    "grunt-sass": "^1.1.0-beta",
     "grunt-scss-lint": "^0.3.8",
-    "matchdep": "^0.3.0"
+    "matchdep": "^1.0.0"
   }
 }
