--- a/package.json
+++ b/package.json
@@ -23,21 +23,21 @@
   "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^6.0.3",
-    "cssnano": "^3.3.1",
+    "cssnano": "^3.3.2",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.3",
     "grunt-bower-task": "^0.4.0",
     "grunt-browser-sync": "^2.1.3",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.8.1",
+    "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-nodeunit": "^0.4.1",
-    "grunt-contrib-uglify": "^0.9.2",
+    "grunt-contrib-uglify": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-modernizr": "^1.0.0",
+    "grunt-modernizr": "^1.0.1",
     "grunt-notify": "^0.4.1",
-    "grunt-postcss": "^0.6.0",
-    "grunt-sass": "^1.1.0-beta",
+    "grunt-postcss": "^0.7.0",
+    "grunt-sass": "^1.1.0",
     "grunt-scss-lint": "^0.3.8",
     "matchdep": "^1.0.0"
   }
